syntax = "proto3";

package remoting_command;

// Broker 注册请求
message BrokerRegisterRequest {
  string broker_name = 1;
  string broker_addr = 2;
  string cluster_name = 3;
  string ha_server_addr = 4;
  int64 broker_id = 5;
  int64 heartbeat_timeout_mills = 6;
  bool enable_acting_master = 7;
}

